--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -13,7 +13,7 @@
 }
 .index_modular {
   padding-bottom: 20rpx;
-  width: 25%;
+  width: 33.33%;
 }
 .index_modular_cri{
   width: 110rpx;
@@ -39,7 +39,7 @@
   border-bottom: 1px solid #eee;
 }
 .leftborder{
-  border-left: 8rpx solid #2FB254;
+  border-left: 8rpx solid #F45F37;
   padding: 0 20rpx;
 }
 .theme{
@@ -55,12 +55,12 @@
   
 }
 .btnrapir{
-  border: 1px solid #2FB254;
+  border: 1px solid #F45F37;
   padding: 0 10rpx;
   border-radius: 10rpx;
 }
-.color2FB254{
-  color: #2FB254;
+.colorF45F37{
+  color: #F45F37;
 }
 .describe{
   padding:  10rpx 10rpx 20rpx 10rpx;
@@ -70,4 +70,9 @@
 }
 .repair{
   padding: 30rpx 0;
+}
+.iconfont{
+  color: #fff;
+  font-size: 50rpx;
+  line-height: 110rpx;
 }
