--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -16,8 +16,8 @@
   width: 33.33%;
 }
 .index_modular_cri{
-  width: 110rpx;
-  height: 110rpx;
+  width:90rpx;
+  height: 90rpx;
   border-radius: 50%;
   margin: 26rpx auto 14rpx auto;
   background-color: rgb(239, 224, 224);
@@ -74,5 +74,35 @@
 .iconfont{
   color: #fff;
   font-size: 50rpx;
-  line-height: 110rpx;
+  line-height: 90rpx;
+}
+.jb1{
+  background:linear-gradient(0deg,rgba(243,67,87,1) 0%,rgba(252,117,88,1) 100%);
+}
+/* .jb2{
+  background:linear-gradient(0deg,rgba(81,193,239,1) 0%,rgba(95,218,213,1) 100%);
+}
+.jb3{
+  background:linear-gradient(0deg,rgba(82,191,253,1) 0%,rgba(52,154,236,1) 100%);
+} */
+.jb2{
+  background:linear-gradient(0deg,rgba(252,214,71,1) 0%,rgba(251,195,60,1) 100%);
+}
+.jb3{
+  background:linear-gradient(0deg,rgba(204,231,92,1) 0%,rgba(159,210,83,1) 100%);
+}
+.jb4{
+  background:linear-gradient(0deg,rgba(250,139,60,1) 0%,rgba(248,127,136,1) 100%);
+}
+.jb5{
+  background:linear-gradient(0deg,rgba(254,200,112,1) 0%,rgba(255,139,16,1) 100%);
+}
+.jb6{
+  background:linear-gradient(0deg,rgba(241,118,76,1) 0%,rgba(248,89,86,1) 100%);
+}
+.jb7{
+  background:linear-gradient(0deg,rgba(252,214,71,1) 0%,rgba(251,195,60,1) 100%);
+}
+.jb8{
+  background:linear-gradient(0deg,rgba(204,231,92,1) 0%,rgba(159,210,83,1) 100%);
 }
