--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -79,18 +79,15 @@
 .jb1{
   background:linear-gradient(0deg,rgba(243,67,87,1) 0%,rgba(252,117,88,1) 100%);
 }
-/* .jb2{
+.jb2{
   background:linear-gradient(0deg,rgba(81,193,239,1) 0%,rgba(95,218,213,1) 100%);
 }
 .jb3{
   background:linear-gradient(0deg,rgba(82,191,253,1) 0%,rgba(52,154,236,1) 100%);
-} */
-.jb2{
-  background:linear-gradient(0deg,rgba(252,214,71,1) 0%,rgba(251,195,60,1) 100%);
 }
-.jb3{
-  background:linear-gradient(0deg,rgba(204,231,92,1) 0%,rgba(159,210,83,1) 100%);
-}
+
+
+
 .jb4{
   background:linear-gradient(0deg,rgba(250,139,60,1) 0%,rgba(248,127,136,1) 100%);
 }
@@ -100,9 +97,19 @@
 .jb6{
   background:linear-gradient(0deg,rgba(241,118,76,1) 0%,rgba(248,89,86,1) 100%);
 }
+
 .jb7{
   background:linear-gradient(0deg,rgba(252,214,71,1) 0%,rgba(251,195,60,1) 100%);
 }
 .jb8{
   background:linear-gradient(0deg,rgba(204,231,92,1) 0%,rgba(159,210,83,1) 100%);
 }
+/* .jb2{
+  background:linear-gradient(0deg,#ff5858 0%,#f09819 100%);
+}
+.jb3{
+  background:linear-gradient(0deg,#ed6ea0 0%,#ec8c69 100%);
+}
+.jb6{
+  background:linear-gradient(0deg,#fc6076 0%,#ff9a44 100%);
+} */
