--- a/pages/repair/index.wxss
+++ b/pages/repair/index.wxss
@@ -73,6 +73,7 @@
   width: 100%;
   height: 300rpx;
   background-color: rgb(239, 224, 224);
+  overflow: hidden;
 }
 .nav_right{
   margin-top: 100rpx;
@@ -139,11 +140,11 @@
 }
 /* 表格代码   */
 .table{
-  border:1px solid #F7F7F7;
-  border-right:0;
+  border:2rpx solid #F7F7F7;
   border-bottom: 0;
-  width:100%;
   margin-bottom: 20rpx;
+  border-radius: 5rpx;
+  overflow: hidden;
 }
 .tr{
   width:100%;
@@ -151,10 +152,10 @@
   justify-content: space-between;
 }
 .th,.td{
-  padding: 10px;
+  padding: 20rpx;
   border-bottom: 1px solid #F7F7F7;
   border-right: 1px solid #F7F7F7;
-  text-align: center;
+  /* text-align: center; */
   width: 100%;
 }
 .th1,.td1{
@@ -162,6 +163,9 @@
 }
 .th2,.td2{
   width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .th{
   font-weight: 800;
@@ -173,4 +177,29 @@
 }
 .marginb20{
   margin-bottom: 20rpx;
+}
+.header{
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 50%;
+  margin-right: 10rpx;
+}
+.plcon{
+  margin-left: 70rpx;
+}
+.plcon .plcont{
+  margin: 6rpx 0 10rpx 0
+}
+.plcon image{
+  width: 200rpx;
+  height: 200rpx;
+}
+::-webkit-scrollbar {
+
+ width: 0;
+
+ height: 0;
+
+ color: transparent;
+
 }
