--- a/pages/repair/index.wxml
+++ b/pages/repair/index.wxml
@@ -4,8 +4,9 @@
     <view class="nac_left_li {{index===navActive?'active':''}}" data-index="{{index}}" bindtap="tap">{{item.categoryName}}</view>
   </view>
 </view>
-<scroll-view class="nav_right" scroll-y="true" scroll-into-view="{{toView}}" scroll-with-animation="true" style="height:{{s_height}}px"  >
-    <view class='page0' id='page-0'>
+<scroll-view class="nav_right"  bindscroll="scroll" scroll-top="{{scrollTop}}" scroll-y="true" scroll-into-view="{{toView}}" scroll-with-animation="true" style="height:{{s_height}}px"  >
+    <view id='page-0'></view>
+    <view class='page0' >
       <view class='banner'>
         <image class="banner" src='../../images/index.jpg'></image>
       </view>
@@ -26,7 +27,8 @@
         </view>
       </view>
     </view>
-    <view class='page page1' id='page-1'>
+    <view id='page-1'></view>
+    <view class='page page1' >
     <view class='con'>
     <view class='size30 center marginb20'>空调维修</view>
      <view class='history-table-wrap'>
