--- a/pages/repair/index.wxss
+++ b/pages/repair/index.wxss
@@ -73,7 +73,6 @@
   width: 100%;
   height: 300rpx;
   background-color: rgb(239, 224, 224);
-  overflow: hidden;
 }
 .nav_right{
   margin-top: 100rpx;
@@ -140,11 +139,11 @@
 }
 /* 表格代码   */
 .table{
-  border:2rpx solid #F7F7F7;
+  border:1px solid #F7F7F7;
+  border-right:0;
   border-bottom: 0;
+  width:100%;
   margin-bottom: 20rpx;
-  border-radius: 5rpx;
-  overflow: hidden;
 }
 .tr{
   width:100%;
@@ -152,10 +151,10 @@
   justify-content: space-between;
 }
 .th,.td{
-  padding: 20rpx;
+  padding: 10px;
   border-bottom: 1px solid #F7F7F7;
   border-right: 1px solid #F7F7F7;
-  /* text-align: center; */
+  text-align: center;
   width: 100%;
 }
 .th1,.td1{
@@ -163,9 +162,6 @@
 }
 .th2,.td2{
   width: 30%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .th{
   font-weight: 800;
@@ -177,29 +173,4 @@
 }
 .marginb20{
   margin-bottom: 20rpx;
-}
-.header{
-  width: 60rpx;
-  height: 60rpx;
-  border-radius: 50%;
-  margin-right: 10rpx;
-}
-.plcon{
-  margin-left: 70rpx;
-}
-.plcon .plcont{
-  margin: 6rpx 0 10rpx 0
-}
-.plcon image{
-  width: 200rpx;
-  height: 200rpx;
-}
-::-webkit-scrollbar {
-
- width: 0;
-
- height: 0;
-
- color: transparent;
-
 }
