--- a/pages/repair/index.wxss
+++ b/pages/repair/index.wxss
@@ -5,24 +5,27 @@
   top:0;
   width:80%;
   padding: 0 10%;
-  /* background:#f1f1f1; */
   background-color: #fff;
   height:100rpx;
   z-index:1001;
   display: flex;
   line-height: 100rpx;
   justify-content: space-between;
+
 }
-.nav_right{
-  overflow: scroll;
-}
+
 .nac_left_li{
   color:#333;
   border-bottom:4rpx solid transparent;
-  width: 100%;
+  display:inline-block; 
   line-height: 96rpx;
+  
 }
-
+.width25{
+  display: inline-block;
+  width: 25%;
+  text-align: center;
+}
 /* .nav_goods_box{
   border-bottom:1px solid #bbb;
   position:relative;
@@ -73,9 +76,11 @@
   width: 100%;
   height: 300rpx;
   background-color: rgb(239, 224, 224);
+  overflow: hidden;
 }
 .nav_right{
   margin-top: 100rpx;
+  background-color: #F7F7F7;
 }
 .page{
   width: 100%;
@@ -130,8 +135,12 @@
   color: white;
   text-align: center;
   margin-bottom: 10rpx;
+  overflow: hidden;
 }
-
+.yuan .iconfont{
+  font-size: 40rpx;
+  padding-top: 20rpx;
+}
 .history-table-wrap{
   width: 100%;
   overflow: hidden;
@@ -139,11 +148,11 @@
 }
 /* 表格代码   */
 .table{
-  border:1px solid #F7F7F7;
-  border-right:0;
+  border:2rpx solid #F7F7F7;
   border-bottom: 0;
-  width:100%;
   margin-bottom: 20rpx;
+  border-radius: 5rpx;
+  overflow: hidden;
 }
 .tr{
   width:100%;
@@ -151,10 +160,10 @@
   justify-content: space-between;
 }
 .th,.td{
-  padding: 10px;
+  padding: 20rpx;
   border-bottom: 1px solid #F7F7F7;
   border-right: 1px solid #F7F7F7;
-  text-align: center;
+  /* text-align: center; */
   width: 100%;
 }
 .th1,.td1{
@@ -162,6 +171,9 @@
 }
 .th2,.td2{
   width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .th{
   font-weight: 800;
@@ -173,4 +185,57 @@
 }
 .marginb20{
   margin-bottom: 20rpx;
+}
+.header{
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 50%;
+  margin-right: 10rpx;
+}
+.plcon{
+  margin-left: 70rpx;
+}
+.plcon .plcont{
+  margin: 6rpx 0 10rpx 0
+}
+.plcon image{
+  width: 200rpx;
+  height: 200rpx;
+}
+::-webkit-scrollbar {
+
+ width: 0;
+
+ height: 0;
+
+ color: transparent;
+
+}
+.fixbtm{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 92%;
+  padding: 14rpx 4% ;
+  height: 72rpx;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  background-color: white;
+}
+.fixbtm .button{
+  height: 72rpx;
+  width: 560rpx;
+  background-color: #F45F37;
+  color: white;
+  line-height: 72rpx;
+  border-radius: 6rpx;
+}
+.allpl{
+  padding: 10rpx 20rpx;
+  border-radius: 50rpx;
+  border:1px solid #444;
+  width: 200rpx;
+  text-align: center;
+  margin: 20rpx auto;
 }
