--- a/pages/address_edit/index.wxss
+++ b/pages/address_edit/index.wxss
@@ -20,8 +20,9 @@ line-height: 110rpx;
 .btnsure{
   width:686rpx;
   height:86rpx;
-  background:linear-gradient(0deg,rgba(68,213,162,1) 0%,rgba(153,228,171,1) 100%);
-  box-shadow:0px 4rpx 13rpx 0px rgba(68,213,162,0.23);
+  /* background:linear-gradient(0deg,rgba(68,213,162,1) 0%,rgba(153,228,171,1) 100%);
+  box-shadow:0px 4rpx 13rpx 0px rgba(68,213,162,0.23); */
+  background-color: #F45F37;
   border-radius:43rpx;
   text-align: center;
   color: white;
