--- a/pages/repairPayment/index.wxml
+++ b/pages/repairPayment/index.wxml
@@ -1,13 +1,13 @@
 <!--pages/repairPayment/index.wxml-->
 <view class='flex_btw align_center orderTitle'>
   <view class='width620 location flex aligncenter' bindtap='link'>
-    <view class='iconfont icon-xiyiji'></view>
+    <view class='iconfont icon-dizhi'></view>
     <view>
       <view class='bold'>收货地址收货地址收货地址收货地址</view>
       <view class='margt42'>李二狗      <text class='marginl54'>18521035656 </text>  </view>
     </view>
   </view>
-  <view class='iconfont icon-jiantou'></view>
+  <view class='iconfont icon-jiantouyou'></view>
 </view>
 
 <view class='fkItem  shitem' >
@@ -25,11 +25,11 @@
     <view class='flex'>
       <text class='bold'>保障</text>
       <view>
-        <text class='iconfont icon-xiyiji'></text>
+        <text class='iconfont icon-qian'></text>
         <text>明码标价</text>
       </view>
     </view>
-    <text class='iconfont icon-jiantou'></text>
+    <text class='iconfont icon-jiantouyou'></text>
   </view>
 </view>
 <view class='color4 size28 kdxx'>
