--- a/pages/address_edit/index.wxss
+++ b/pages/address_edit/index.wxss
@@ -11,7 +11,7 @@
   margin: auto;
   border-bottom: 1px solid #eee;
 }
-input{
+input,picker{
   color: #898989;
   width: 530rpx;
   height:110rpx;
