--- a/pages/order/index.wxss
+++ b/pages/order/index.wxss
@@ -1,4 +1,7 @@
 /* pages/order/index.wxss */
+page{
+  background-color: #f8f8f8;
+}
 .bordered:before {
 	content: " ";
 	position: absolute;
@@ -26,11 +29,11 @@ swiper{
   min-height: 1116rpx;
 }
 .fkItem{
-  width:650rpx;
+  /* width:650rpx; */
   background:rgba(255,255,255,1);
-  box-shadow:0px 3rpx 10rpx 0px rgba(191,189,189,1);
+  /* box-shadow:0px 3rpx 10rpx 0px rgba(191,189,189,1); */
   border-radius:10rpx;
-  padding: 18rpx 18rpx 0 18rpx;
+  padding: 18rpx 32rpx 0 32rpx;
   margin: 0 auto 45rpx auto;
   position: relative;
 }
@@ -45,13 +48,15 @@ swiper{
 }
 .list1{
   padding: 20rpx 0;
-  border-bottom: 1px solid #eee;
+  /* border-bottom: 1px solid #eee; */
 }
 .fkItem_goods{
-
+  padding-bottom: 20rpx;
+  border-bottom: 1px solid #eee;
 }
 .fkItem_goods_ms .colorFE2C2C{
   margin-top: 12rpx;
+
 }
 checkbox .wx-checkbox-input{
    border-radius: 50%;/* 圆角 */
@@ -101,12 +106,13 @@ checkbox .wx-checkbox-input.wx-checkbox-input-checked{
 .btnck,.btnyqx{
   width:150rpx;
   height:50rpx;
-  border:1px solid #444;
+  border:1px solid #F45F37;
   border-radius:25rpx;
   text-align: center;
   line-height: 50rpx;
   margin-left: 10rpx;
   font-size: 26rpx;
+  color: #F45F37;
 }
 
 .btnyqx{
@@ -166,18 +172,8 @@ margin:-12rpx 0 0 0;
   width: 600rpx;
   text-align: left;
   font-size: 24rpx;
-  /* display: flex;
-  justify-content: space-between; */
-  /* align-items: center; */
 }
-.weui-cell-time{
-  /* width: 50px; */
-  /* float: left; */
-  /* font-size:14px;
-  padding-left: 15px;
-  width: 72px; */
- 
-}
+
 .weui-cell-event{
  max-width: 270rpx;
 }
@@ -239,4 +235,22 @@ color:rgba(46,179,84,1);
 }
 .list1>view:last-of-type{
   border-bottom: 1px solid transparent;
+}
+.permes{
+  line-height: 48rpx;
+  padding: 10rpx 0;
+  border-bottom: 1px solid #eee;
+}
+.logo{
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+  margin-right: 10rpx;
+}
+.list1 .textR{
+  padding: 20rpx 0;
+  /* border-bottom: 1px solid #eee; */
+}
+.list1 .flex_reverse{
+  margin-top: 20rpx;
 }
